Spigot 1.19.3 & Java 16 + some warning fixes